# Kovix_2.0

./: .env.example  .gitattributes  .gitignore  .gitleaksignore  .npmrc  AGENT_CORE_MAP.md  BLOCKERS.md  BUILD.md  BUILD_STATUS.md  CARTOGRAPHY_SUMMARY.md  CHANGELOG.md  CI_SETUP_REPORT.md  CONSTRUCT_ADDITIONAL_TERMS.txt  CONSTRUCT_LICENSE.txt  CONTRIBUTING.md  DEMO_REPORT.md  DESIGN_TOKEN_INVENTORY.md  E2E_REAL_LLM_VERIFIED.md  E2E_TEST_PHASE1.md  E2E_VERIFICATION.md  ENVIRONMENT.md  FINAL_BUILD_REPORT.md  GROUND_TRUTH.md  HARVEST_CANDIDATES.md  INSTALL.md  KOVIX_DESIGN_SYSTEM_FOUNDATION.md  KOVIX_LICENSE.txt  LAUNCH_CHECKLIST.md  LAUNCH_FAILURE_DIAGNOSIS.md  LAUNCH_TEST_REPORT.md  LAUNCH_VERIFICATION.md  LICENSE.txt  MANUAL_GUI_TEST_PLAN.md  NAMING_AUDIT.md  NOTICE.md  PACKAGING.md  PHASE0_NOTES.md  PHASE1_RENAME_REPORT.txt  PHASE4_COMPLETION_REPORT.md  PHASE5_REPORT.md  (+30 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.pkg-config/: xkbfile.pc
agent-backend/: app.py  pyinstaller_build.py  requirements-test.txt  requirements.txt
agent-ctx/: redesign-premium-components-agent.md
branding/: README.md
demo/: agent-panel.html  index.html  multi-agent.html  onboarding.html  skills-marketplace.html
docs/: CODE_SIGNING_SETUP.md  DECISIONS-v1.8.0.md  USER_JOURNEY.md  index.html  license.html  privacy.html  update.json
extensions/: package-lock.json  package.json
src/main/: Cargo.toml  tauri.conf.json
src/main/capabilities/: default.json
src/main/src/: db.rs  lib.rs  sidecar.rs  state.rs  terminal.rs
src/main/src/commands/: agent.rs  memory.rs  mod.rs
(+1041 files in other folders)
